TICK/chronograf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chronograf
  name: chronograf
  namespace: tick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chronograf
    spec:
      containers:
      - image: chronograf
        name: chronograf
        ports:
        - containerPort: 8888
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/chronograf
          name: chronograf-claim
      restartPolicy: Always
      volumes:
      - name: chronograf-claim
        persistentVolumeClaim:
          claimName: chronograf-pv-claim
