TICK/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: tick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - image: influxdb
        name: influxdb
        ports:
        - containerPort: 8086
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influxdb-claim
      restartPolicy: Always
      volumes:
      - name: influxdb-claim
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
