TICK/kapacitor-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kapacitor-cli
  name: kapacitor-cli
  namespace: tick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kapacitor-cli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kapacitor-cli
    spec:
      containers:
      - command:
        - bash
        image: kapacitor
        name: kapacitor-cli
        resources: {}
      restartPolicy: Always
