TICK/chronograf-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chronograf
  name: chronograf
  namespace: tick
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    app: chronograf
