TICK/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: tick
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  selector:
    app: influxdb
  loadBalancerIP: 192.168.1.249
