TICK/kapacitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kapacitor
  name: kapacitor
  namespace: tick
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  selector:
    app: kapacitor
