TICK/telegraf-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: telegraf
  name: telegraf
  namespace: tick
spec:
  ports:
  - name: "8092"
    port: 8092
    protocol: UDP
    targetPort: 8092
  - name: "8094"
    port: 8094
    targetPort: 8094
  - name: "8125"
    port: 8125
    protocol: UDP
    targetPort: 8125
  selector:
    app: telegraf
