TICK/chronograf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chronograf
  namespace: tick
spec:
  rules:
  - host: chronograf
    http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: chronograf
            port:
              number: 8888
